# svelte-client-side-api-calls

./: .gitignore  README.md  package-lock.json  package.json  slumber.yml
api-server/: main.py  pyproject.toml
src/: app.html
src/lib/components/: README.md  call_fapi.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/decompose/: +page.svelte
src/routes/table/: +page.svelte
