[tool.poetry]
name = "api-server"
version = "0.1.0"
description = ""
authors = ["Gatewaynode <44749714+gatewaynode@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"

[tool.poetry.scripts]
main = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
